# kit-api

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
kitapi/: __init__.py  main.py
kitapi/core/: __init__.py  errors.py  settings.py
kitapi/core/models/: __init__.py  db.py  exceptions.py  models.py
kitapi/core/schemas/: __init__.py  schemas.py
kitapi/v1/: __init__.py  api.py  utils.py
kitapi/v1/endpoints/: __init__.py  fact.py
static/: index.html
static/css/: bootstrap.css  bootstrap.min.css  dracula.css  dracula.min.css
static/scss/: _custom.scss  _variables.scss
