[tool.poetry]
name = "kit-api"
version = "0.3.0"
description = "An api dedicated to kitty cats."
authors = ["Jonxslays"]
license = "BSD-3-Clause"
include = ["kitapi"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
asyncpg = "^0.24.0"
tortoise-orm = "^0.17.8"
uvloop = "^0.16.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pyright = "^0.0.10"
aiohttp = ">=3.7.4.post0"

[tool.black]
line-length = 99

[tool.pyright]
include = ["kitapi"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
