[tool.poetry]
name = "kit-api"
version = "0.3.0"
description = "An api dedicated to kitty cats."
authors = ["Jonxslays"]
license = "BSD-3-Clause"
include = ["kitapi"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
asyncpg = "^0.25.0"
tortoise-orm = "^0.17.8"
uvloop = "^0.16.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pyright = "^0.0.13"
aiohttp = "^3.8"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.pyright]
include = ["kitapi"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
