[tool.poetry]
name = "kit-api"
version = "0.3.0"
description = "An api dedicated to kitty cats."
authors = ["Jonxslays"]
license = "BSD-3-Clause"
include = ["kitapi"]

[tool.poetry.dependencies]
python = "^3.10.0,<3.12"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
asyncpg = "^0.25.0"
tortoise-orm = "^0.19.0"
uvloop = "^0.16.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.10.1"
pyright = "^1.1.263"
aiohttp = "^3.8"
len8 = "^0.7.3"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.len8]
include = ["kitapi",]
code-length = 99
docs-length = 72
strict = true

[tool.pyright]
include = ["kitapi"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
